--- a/src/app/docente/forms/add-contenido/add-contenido.component.html
+++ b/src/app/docente/forms/add-contenido/add-contenido.component.html
@@ -31,9 +31,12 @@
     </div>
 
     <div class="flex justify-end mt-6">
-      <button type="button" class="bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838]">
+      <button 
+        type="button" 
+        class="bg-[#004C4C] text-white font-semibold py-2 w-40 rounded-lg hover:bg-[#003838] transition duration-300">
         Aceptar
       </button>
     </div>
+    
   </div>
 </div>
