--- a/src/app/director/home-director/home-director.component.html
+++ b/src/app/director/home-director/home-director.component.html
@@ -1,10 +1,18 @@
-<app-header-director (openAddDocenteModalEvent)="openAddDocenteModal()" (openProfileModalEvent)="openViewUsuarioModal()"></app-header-director>
+<app-header-director (openAddDocenteModalEvent)="openAddDocenteModal()"
+  (openProfileModalEvent)="openViewUsuarioModal()"></app-header-director>
 
 <div class="p-8">
-  <h1 class="text-3xl font-bold text-teal-600">Bienvenido Director</h1>
-  <p class="mt-4 text-lg">Gestiona los docentes y otras funcionalidades aquí.</p>
-  <app-card-docente></app-card-docente>
+  <h1 class="text-3xl font-bold text-teal-600 text-center">BIENVENIDO DIRECTOR</h1>
+  <br>
+  <h2 class="text-3xl font-bold text-teal-600">Docentes:</h2>
+  <br><br><br>
+  <div class="flex justify-center items-center w-full">
+    <div class="w-[1400px] h-[500px] bg-[#b2d9d8]/40 rounded-[30px] flex justify-center items-center">
+      <app-docente-list></app-docente-list>
+    </div>
+  </div>
 </div>
 
 <app-add-docente-modal *ngIf="showAddDocenteModal" (closeModalEvent)="closeAddDocenteModal()"></app-add-docente-modal>
-<app-view-usuario-modal *ngIf="showViewUsuarioModal && selectedUserId !== null" [userId]="selectedUserId" (closeModalEvent)="closeViewUsuarioModal()"></app-view-usuario-modal>
+<app-view-usuario-modal *ngIf="showViewUsuarioModal && selectedUserId !== null" [userId]="selectedUserId"
+  (closeModalEvent)="closeViewUsuarioModal()"></app-view-usuario-modal>
