--- a/src/app/shared/layout/header-group/header-group.component.html
+++ b/src/app/shared/layout/header-group/header-group.component.html
@@ -2,7 +2,7 @@
 
   <div class="flex items-center space-x-2">
     <h1 class="text-xl font-semibold whitespace-nowrap overflow-hidden overflow-ellipsis cursor-pointer"
-    (click)="backToHome()">Matematicas I</h1>
+    (click)="backToHome()">  Inicio </h1>
     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
       <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
     </svg>
