--- a/src/app/shared/cards/generic-card/generic-card.component.html
+++ b/src/app/shared/cards/generic-card/generic-card.component.html
@@ -1,15 +1,43 @@
 <div 
   class="p-4 cursor-pointer mb-4" 
-  (click)="onCardClick()">
-  <div class="w-full h-full bg-white border-2 border-[#004C4C99] rounded-lg shadow-md p-6 relative">
+  [ngClass]="{ 'bg-[#B2D9D866] rounded-lg p-4': cardType === 'alumno'}"
+  (click)="onCardClick()"
+>
+  <div *ngIf="cardType === 'activity'" class="w-full h-full bg-white border-2 border-[#004C4C99] rounded-lg shadow-md p-6 relative">
     <div class="flex justify-between items-center px-4 rounded-lg">
-      <h3 class="text-lg font-semibold text-[#00000099]">{{ cardData?.tema || 'Tema de actividad' }}</h3>
+      <h3 class="text-lg font-semibold text-[#00000099]">{{ cardData?.tema || 'Título de actividad' }}</h3>
     </div>
     <div class="p-2 px-8">
-      <p class="text-black font-semibold text-lg">{{ cardData?.subtema || 'Subtema de actividad' }}</p>
+      <p class="text-black font-semibold text-lg">{{ cardData?.subtema || 'Descripción de actividad' }}</p>
     </div>
-    <div class="absolute bottom-4 right-4" *ngIf="userType !== 'alumno'">
-      <img src="./menu_1.png" alt="menu de opciones" class="w-auto h-8">
+    <div class="absolute bottom-4 right-4" *ngIf="userType === 'docente'">
+      <img src="menu_1.png" alt="menu de opciones" class="w-auto h-8">
+    </div>
+  </div>
+
+  <div *ngIf="cardType === 'temario'" class="py-2 px-12">
+    <div class="w-full flex items-center h-16 bg-white border-2 border-[#004C4C99] rounded-lg shadow-md relative">
+      <div class="px-4 flex justify-start items-center rounded-lg">
+        <h3 class="text-lg font-semibold text-[#000000]">Temario {{ cardData?.id_temario || 'Título del temario' }}</h3>
+      </div>
+      <div class="absolute bottom-4 right-4" *ngIf="userType === 'docente'">
+        <img src="menu_1.png" alt="menu de opciones" class="w-auto h-8">
+      </div>
+    </div>
+  </div>
+
+  <div *ngIf="cardType === 'alumno'" class="flex flex-col items-center w-full">
+    <div 
+      *ngFor="let alumno of cardData; let last = last" 
+      class="flex items-center w-full py-4 relative" 
+      [ngClass]="{ 'border-b border-black': !last }"
+    >
+      <img src="user.png" alt="icon.user" class="w-10 h-10 rounded-full mr-4">
+      <p class="text-base font-semibold text-[#004C4C] flex-grow">{{ alumno.nombre }}</p>
+      
+      <div *ngIf="userType === 'docente'" class="absolute right-4">
+        <img src="menu_1.png" alt="menu de opciones" class="w-auto h-8">
+      </div>
     </div>
   </div>
 </div>
