--- a/src/app/docente/view-group/view-temario/view-temario.component.html
+++ b/src/app/docente/view-group/view-temario/view-temario.component.html
@@ -7,7 +7,7 @@
 
     <button 
       class="text-[#004C4C] text-lg font-semibold hover:underline" 
-      >
+    >
       + Crear
     </button>
   </div>
@@ -18,6 +18,7 @@
       [cardData]="temario" 
       cardType="temario" 
       class="w-full">
-    </app-generic-card>
+      <a [href]="temario.documento_pdf" target="_blank">Ver temario</a>
+    </app-generic-card>  
   </div>  
 </div>
