--- a/src/app/shared/cards/generic-card/generic-card.component.html
+++ b/src/app/shared/cards/generic-card/generic-card.component.html
@@ -27,17 +27,16 @@
   </div>
 
   <div *ngIf="cardType === 'alumno'" class="flex flex-col items-center w-full">
-    <div 
-      *ngFor="let alumno of cardData; let last = last" 
-      class="flex items-center w-full py-4 relative" 
-      [ngClass]="{ 'border-b border-black': !last }"
-    >
-      <img src="user.png" alt="icon.user" class="w-10 h-10 rounded-full mr-4">
-      <p class="text-base font-semibold text-[#004C4C] flex-grow">{{ alumno.nombre }}</p>
-      
-      <div *ngIf="userType === 'docente'" class="absolute right-4">
-        <img src="menu_1.png" alt="menu de opciones" class="w-auto h-8">
-      </div>
+  <div 
+    class="flex items-center w-full py-4 relative"
+  >
+    <img src="user.png" alt="icon.user" class="w-10 h-10 rounded-full mr-4">
+    <p class="text-base font-semibold text-[#004C4C] flex-grow">{{ cardData?.nombre }}</p>
+    
+    <div *ngIf="userType === 'docente'" class="absolute right-4">
+      <img src="menu_1.png" alt="menu de opciones" class="w-auto h-8">
     </div>
   </div>
+</div>
+
 </div>
