--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<app-header 
-  *ngIf="showHeader" 
-  [role]="role" 
-  (addGroup)="openModal()" 
-  (openProfileModalEvent)="openProfileModal()">
+<app-header
+  *ngIf="showHeader && (role === 'docente' || role === 'alumno')"
+  [role]="role"
+  (addGroup)="openModal()">
 </app-header>
+
 <router-outlet></router-outlet>
+
+<app-profile-modal [role]="role"></app-profile-modal>
