--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,10 +1,6 @@
 <div class="flex items-center justify-between px-4 py-2 bg-black text-white">
   <div class="flex items-center">
-    <button class="p-2 text-teal-500 hover:text-teal-700 focus:outline-none">
-      <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-      </svg>
-    </button>
+
     <img src="/logo-complet.png" alt="Brainiacs Logo" class="w-[156px] h-[68px]">
   </div>
 
@@ -21,12 +17,13 @@
     </button>
 
     <div class="w-8 h-8 bg-teal-600 rounded-full flex items-center justify-center hover:bg-teal-700">
-      <button (click)="onProfileModal()"
-      >
-      <svg class="w-6 h-6 text-black" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
-      </svg>
-    </button>
+      <button (click)="onProfileModal()">
+        <svg class="w-6 h-6 text-black" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+        </svg>
+      </button>
     </div>
+    
+    
   </div>
 </div>
