--- a/src/app/docente/view-group/view-alumnos/view-alumnos.component.html
+++ b/src/app/docente/view-group/view-alumnos/view-alumnos.component.html
@@ -1,7 +1,9 @@
 <div class="flex flex-col items-center w-full p-6">
   <div class="flex items-center justify-between w-10/12 pb-6">
     <p class="text-3xl font-bold text-[#004C4C]">Alumnos</p>
-    <button class="text-[#004C4C] text-lg font-semibold hover:underline">+ Agregar</button>
+    <button class="flex items-center text-[#004C4C] text-2xl font-semibold">
+      <img src="/create.png" alt="Crear" class="w-5 h-5 mr-2"> Crear
+    </button>
   </div>
 
   <div class="w-10/12">
