--- a/src/app/shared/cards/generic-card/generic-card.component.html
+++ b/src/app/shared/cards/generic-card/generic-card.component.html
@@ -1,6 +1,5 @@
 <div 
-  class="p-4 cursor-pointer mb-4" 
-  [ngClass]="{ 'bg-[#B2D9D866] rounded-lg p-4': cardType === 'alumno'}"
+  class="cursor-pointer" 
   (click)="onCardClick()"
 >
   <div *ngIf="cardType === 'activity'" class="w-full h-full bg-white border-2 border-[#004C4C99] rounded-lg shadow-md p-6 relative">
@@ -27,17 +26,15 @@
     </div>
   </div>
 
-  <div *ngIf="cardType === 'alumno'" class="flex flex-col items-center w-full">
-  <div 
-    class="flex items-center w-full py-4 relative"
-  >
-    <img src="user.png" alt="icon.user" class="w-10 h-10 rounded-full mr-4">
-    <p class="text-base font-semibold text-[#004C4C] flex-grow">{{ cardData?.nombre }}</p>
-    
-    <div *ngIf="userType === 'docente'" class="absolute right-4">
-      <img src="menu_1.png" alt="menu de opciones" class="w-auto h-8">
+  <div *ngIf="cardType === 'alumno'" class="flex flex-col items-center w-full h-auto bg-[#B2D9D866] rounded-lg">
+    <div 
+      class="flex items-center w-full py-5 border-b border-black relative">
+      <img src="user.png" alt="icon.user" class="w-10 h-10 rounded-full mr-4 ml-4">
+      <p class="text-base font-semibold text-[#004C4C] flex-grow">{{ cardData?.nombre }}</p>
+
+      <div *ngIf="userType === 'docente'" class="absolute right-4 top-1/2 transform -translate-y-1/2">
+        <img src="menu_1.png" alt="menu de opciones" class="w-auto h-8">
+      </div>
     </div>
   </div>
-</div>
-
 </div>
