--- a/src/app/docente/view-group/view-activity/view-activity.component.html
+++ b/src/app/docente/view-group/view-activity/view-activity.component.html
@@ -16,5 +16,6 @@
       </app-generic-card>
   </div>
 
-  <app-form-add-modal></app-form-add-modal>
+  <app-generic-modal></app-generic-modal>
+
 </div>
