--- a/src/app/docente/home-docente/home-docente.component.html
+++ b/src/app/docente/home-docente/home-docente.component.html
@@ -13,6 +13,4 @@
   </div>
 </div>
 
-<app-form-add-modal></app-form-add-modal>
-<app-form-update-modal></app-form-update-modal>
-<app-delete-modal></app-delete-modal>
+<app-generic-modal></app-generic-modal>
