add delete modal in generic

--- a/src/app/shared/modals/generic-modal/generic-modal.component.html
+++ b/src/app/shared/modals/generic-modal/generic-modal.component.html
@@ -6,6 +6,7 @@
       <app-add-contenido-ia *ngSwitchCase="'contenidoIA'"></app-add-contenido-ia>
       <app-update-group *ngSwitchCase="'editGroup'"></app-update-group>
       <app-update-activity *ngSwitchCase="'editActivity'"></app-update-activity>
+      <app-delete-group *ngSwitchCase="'deleteGroup'"></app-delete-group>
       <div *ngSwitchDefault class="text-red-500">Selecciona una opción válida</div>
     </div>
   </div>
