--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header
-  *ngIf="showHeader && (role === 'docente' || role === 'alumno')"
+  *ngIf="showHeader && (role === 'docente' || role === 'alumno' || role === 'director')"
   [role]="role"
   (addGroup)="openModal()">
 </app-header>
