--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -6,7 +6,7 @@
 
   <div class="flex items-center space-x-4">
     <button
-      *ngIf="role !== 'alumno'"
+      *ngIf="role == 'docente'"
       (click)="onAddGroup()"
       [ngClass]="{ 'bg-teal-600 rounded-full text-white w-8 h-8 flex items-center justify-center': isClicked }"
       class="text-teal-600 hover:text-teal-800 focus:outline-none transition-all duration-200"
@@ -15,6 +15,17 @@
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
       </svg>
     </button>
+
+    <button
+    *ngIf="role == 'director'"
+    (click)="onAddDocente()"
+    [ngClass]="{ 'bg-teal-600 rounded-full text-white w-8 h-8 flex items-center justify-center': isClicked }"
+    class="text-teal-600 hover:text-teal-800 focus:outline-none transition-all duration-200"
+  >
+    <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+    </svg>
+  </button>
 
     <div class="w-8 h-8 bg-teal-600 rounded-full flex items-center justify-center hover:bg-teal-700">
       <button (click)="onProfileModal()">
