--- a/src/app/alumno/view-group-alumn/students-alumn/students-alumn.component.html
+++ b/src/app/alumno/view-group-alumn/students-alumn/students-alumn.component.html
@@ -4,7 +4,7 @@
 </div>
   
   <div class="w-10/12">
-      <app-generic-card [cardData]="alumnos" cardType="alumno" class="w-full"></app-generic-card>
+      <app-alumno [cardData]="alumnos" cardType="alumno" class="w-full"></app-alumno>
     </div>  
   
   </div>
