--- a/src/app/docente/view-group/view-temario/view-temario.component.html
+++ b/src/app/docente/view-group/view-temario/view-temario.component.html
@@ -7,11 +7,11 @@
   </div>
 
   <div class="w-10/12">
-    <app-generic-card 
+    <app-temario 
       *ngFor="let temario of temarios" 
       [cardData]="temario" 
       cardType="temario" 
       class="w-full">
-    </app-generic-card>
+    </app-temario>
   </div>
 </div>
