--- a/src/app/shared/modals/generic-modal/generic-modal.component.html
+++ b/src/app/shared/modals/generic-modal/generic-modal.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="modalOpen" class="fixed inset-0 bg-gray-600 bg-opacity-50 flex justify-center items-center">
     <div [ngSwitch]="modalType">
       <app-add-group *ngSwitchCase="'group'"></app-add-group>
+      <app-add-docente-modal *ngSwitchCase="'docente'"></app-add-docente-modal>
       <app-add-tarea *ngSwitchCase="'tarea'"></app-add-tarea>
       <app-add-contenido *ngSwitchCase="'contenido'"></app-add-contenido>
       <app-add-contenido-ia *ngSwitchCase="'contenidoIA'"></app-add-contenido-ia>
