--- a/src/app/shared/cards/activity/activity.component.html
+++ b/src/app/shared/cards/activity/activity.component.html
@@ -1,21 +1,25 @@
-<div class="relative w-full h-full bg-white border-2 border-[#004C4C99] rounded-lg shadow-md p-6">
+<div class="relative py-2 px-12">
+  <div class="relative w-full h-full bg-white border-2 border-[#004C4C99] rounded-lg shadow-md p-6">
     <div class="flex justify-between items-center px-4 rounded-lg">
       <h3 class="text-lg font-semibold text-[#00000099]">{{ cardData?.tema || 'Título de actividad' }}</h3>
     </div>
     <div class="p-2 px-8">
       <p class="text-black font-semibold text-lg">{{ cardData?.subtema || 'Descripción de actividad' }}</p>
     </div>
-    <button 
-      (click)="toggleModal()" 
-      class="absolute top-6 right-4 text-gray-400 hover:text-gray-600"
-    >
-      <img class="h-8" src="./menu_1.png" alt="Menú de opciones" />
-    </button>
-    
-    <app-menu-modals
-      *ngIf="showModal"
-      (closeModal)="showModal = false"
-      (optionSelected)="handleOption($event)"
-      class="absolute top-[calc(1.5rem)] right-4 translate-y-full z-10">
-    </app-menu-modals>
+    <div class="relative">
+      <button 
+        (click)="toggleModal()" 
+        class="absolute bottom-4 right-2 text-gray-400 hover:text-gray-600"
+      >
+        <img class="h-8" src="./menu_1.png" alt="Menú de opciones" />
+      </button>
+
+      <app-menu-modals
+        *ngIf="showModal"
+        (closeModal)="showModal = false"
+        (optionSelected)="handleOption($event)"
+        class="absolute right-0 top-full mt-2 w-48 bg-white shadow-lg rounded-lg p-4 z-50">
+      </app-menu-modals>
+    </div>
   </div>  
+</div>
