--- a/src/app/shared/cards/card-group/card-group.component.html
+++ b/src/app/shared/cards/card-group/card-group.component.html
@@ -21,7 +21,8 @@
     <app-menu-modals
       *ngIf="showModal"
       (closeModal)="showModal = false"
-      (optionSelected)="handleOption($event)">
+      (optionSelected)="handleOption($event)"
+      class="bg-white shadow-lg rounded-lg w-48 p-4 absolute left-[58%] transform translate-y-1/2 z-50">
     </app-menu-modals>  
   </div>
 </div>
