Modales de las Cards del Modulo Alumno

--- a/src/app/director/home-director/home-director.component.html
+++ b/src/app/director/home-director/home-director.component.html
@@ -17,6 +17,7 @@
         *ngFor="let docente of docentes"
         [subjectName]="docente.nombre"
         [userType]="'director'"
+        [docenteId]="docente.id_docente" 
         [userImage]="docenteImages[docente.usuario]">
       </app-card-docente>
     </div>
