--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,7 +1,8 @@
 <div class="flex items-center justify-between px-4 py-2 bg-black text-white">
   <div class="flex items-center">
-
+<button (click)="backToHome()">
     <img src="/logo-complet.png" alt="Brainiacs Logo" class="w-[156px] h-[68px]">
+  </button>
   </div>
 
   <div class="flex items-center space-x-4">
