--- a/src/app/alumno/home-alumno/home-alumno.component.html
+++ b/src/app/alumno/home-alumno/home-alumno.component.html
@@ -10,4 +10,7 @@
       ></app-card-group>
     </div>
   </div>
+  <div class="fixed bottom-4 right-4 z-50">
+    <app-chatbot-alumn></app-chatbot-alumn>
+  </div>
 </div>
