--- a/src/app/shared/cards/activity/activity.component.html
+++ b/src/app/shared/cards/activity/activity.component.html
@@ -1,4 +1,7 @@
-<div class="relative py-2 px-12">
+<div 
+  class="relative py-2 px-12 cursor-pointer"
+  (click)="onCardClick()"
+>
   <div class="relative w-full h-full bg-white border-2 border-[#004C4C99] rounded-lg shadow-md p-6">
     <div class="flex justify-between items-center px-4 rounded-lg">
       <h3 class="text-lg font-semibold text-[#00000099]">{{ cardData?.tema || 'Título de actividad' }}</h3>
@@ -6,7 +9,8 @@
     <div class="p-2 px-8">
       <p class="text-black font-semibold text-lg">{{ cardData?.subtema || 'Descripción de actividad' }}</p>
     </div>
-    <div class="relative">
+    
+    <div class="relative" *ngIf="userType !== 'alumno'">
       <button 
         (click)="toggleModal()" 
         class="absolute bottom-4 right-2 text-gray-400 hover:text-gray-600"
