--- a/src/app/shared/cards/card-docente/card-docente.component.html
+++ b/src/app/shared/cards/card-docente/card-docente.component.html
@@ -15,7 +15,9 @@
     <app-menu-modals
       *ngIf="showModal"
       (closeModal)="showModal = false"
-      (optionSelected)="handleOption($event)">
+      (optionSelected)="handleOption($event)"
+      class="absolute right-0 top-full mt-2 w-48 bg-white shadow-lg rounded-lg p-4 z-50">
+      >
     </app-menu-modals>
   </div>
 </div>
