--- a/src/app/shared/cards/temario/temario.component.html
+++ b/src/app/shared/cards/temario/temario.component.html
@@ -1,9 +1,9 @@
-<div class="relative py-2 px-12">
+<div class="relative py-2 px-12 cursor-pointer" (click)="onCardClick()">
   <div class="relative w-full h-16 bg-white border-2 border-[#004C4C99] rounded-lg shadow-md flex items-center justify-between px-4">
     <h3 class="text-lg font-semibold text-black">
       Temario: Parcial 1
     </h3>
-    <div class="relative">
+    <div class="relative" *ngIf="userType !== 'alumno'">
       <button 
         (click)="toggleModal()"
         class="flex items-center justify-center"
