--- a/src/app/docente/forms/add-contenido-ia/add-contenido-ia.component.html
+++ b/src/app/docente/forms/add-contenido-ia/add-contenido-ia.component.html
@@ -8,8 +8,8 @@
     <h2 class="text-center text-xl font-semibold text-gray-800 mb-4">Generar Contenido</h2>
 
     <div class="mb-4">
-      <label for="prompt" class="block text-gray-700 font-medium mb-2">Ingrese las instrucciones</label>
-      <input type="text" id="prompt" [(ngModel)]="promptInput" placeholder="Escribe aquí el prompt"
+      <label for="prompt" class="block text-gray-700 font-medium mb-2">Ingrese su contenido a generar</label>
+      <input type="text" id="prompt" [(ngModel)]="promptInput" placeholder="Escriba aqui las instrucciones"
         class="w-full p-3 border rounded-md focus:outline-none focus:ring-2 focus:ring-[#004C4C]" />
     </div>
 
