--- a/src/app/docente/view-group/view-activity/view-activity.component.html
+++ b/src/app/docente/view-group/view-activity/view-activity.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="w-10/12">
-      <app-activity>
+      <app-activity
         *ngFor="let activity of activities" 
         [cardData]="activity" 
         cardType="activity" 
