--- a/src/app/docente/view-group/view-alumnos/view-alumnos.component.html
+++ b/src/app/docente/view-group/view-alumnos/view-alumnos.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col items-center w-full p-6">
   <div class="flex items-center justify-between w-10/12 pb-6">
     <p class="text-3xl font-bold text-[#004C4C]">Alumnos</p>
-    <button class="flex items-center text-[#004C4C] text-2xl font-semibold">
+    <button class="flex items-center text-[#004C4C] text-2xl font-semibold" (click)="onAddAlumno()">
       <img src="/create.png" alt="Crear" class="w-5 h-5 mr-2"> Crear
     </button>
   </div>
@@ -16,7 +16,7 @@
       <p>{{ alumno.nombre }}</p>
     </app-alumno>
 
-
+    <app-generic-modal></app-generic-modal>
 
   </div>  
 </div>
