--- a/src/app/shared/cards/temario/temario.component.html
+++ b/src/app/shared/cards/temario/temario.component.html
@@ -13,6 +13,7 @@
 
       <app-menu-modals
         *ngIf="showModal"
+        [isGroupView]="isGroupView"
         (closeModal)="showModal = false"
         (optionSelected)="handleOption($event)"
         class="absolute right-0 top-full mt-2 w-48 bg-white shadow-lg rounded-lg p-4 z-50"
