--- a/src/app/docente/forms/add-temario/add-temario.component.html
+++ b/src/app/docente/forms/add-temario/add-temario.component.html
@@ -1,7 +1,7 @@
-<div class="w-[400px] h-auto mx-auto bg-white p-8 rounded-lg shadow-md">
+<div class="w-[400px] h-auto mx-auto bg-white p-8 rounded-lg shadow-lg">
   
   <div class="flex justify-center mb-4">
-    <img src="/pdf-icon.png" alt="Subir Archivo" class="w-20 h-20 object-cover">
+    <img src="/pdf-icon.png" alt="Subir Archivo" class="w-16 h-16 object-cover">
   </div>
 
   <h2 class="text-2xl font-semibold text-[#004C4C] mb-6 text-center">
@@ -9,16 +9,20 @@
   </h2>
 
   <div class="p-6">
-    <form>
-      <div class="mb-4">
+    <form (ngSubmit)="onUploadTemario()">
+      <div class="mb-6">
         <label for="archivo" class="block text-gray-700 font-medium mb-2">Subir archivo</label>
-        <input type="file" id="archivo" name="archivo" class="w-full p-3 border rounded-md focus:outline-none focus:ring-2 focus:ring-[#004C4C]" placeholder="Subir archivos">
+        <input type="file" id="archivo" name="archivo" class="w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#004C4C]" (change)="onFileSelected($event)" placeholder="Subir archivos" required>
       </div>
-    </form>
-  </div>
-
-  <div class="flex justify-between mt-6">
-    <button type="submit" class="w-full bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838] mr-2">Subir PDF</button>
-    <button type="button" class="w-full bg-[#004C4C] text-white font-semibold py-2 px-4 rounded-lg hover:bg-[#003838]" (click)="closeModal()">Cancelar</button>
+    
+      <div class="flex justify-between gap-4">
+        <button type="submit" class="w-full bg-[#004C4C] text-white font-semibold py-3 px-4 rounded-lg hover:bg-[#003838] transition duration-300" [disabled]="!archivo">
+          Subir PDF
+        </button>
+        <button type="button" class="w-full bg-[#FF5B5B] text-white font-semibold py-3 px-4 rounded-lg hover:bg-[#D74747] transition duration-300" (click)="closeModal()">
+          Cancelar
+        </button>
+      </div>
+    </form>    
   </div>
 </div>
