--- a/src/app/shared/modals/generic-modal/generic-modal.component.html
+++ b/src/app/shared/modals/generic-modal/generic-modal.component.html
@@ -4,6 +4,7 @@
       <app-add-docente-modal *ngSwitchCase="'docente'"></app-add-docente-modal>
       <app-add-alumno *ngSwitchCase="'alumno'"></app-add-alumno>
       <app-add-tarea *ngSwitchCase="'tarea'"></app-add-tarea>
+      <app-inspect-activity *ngSwitchCase="'inspect-activity'"></app-inspect-activity>
       <app-add-temario *ngSwitchCase="'temario'"></app-add-temario>
       <app-add-contenido *ngSwitchCase="'contenido'"></app-add-contenido>
       <app-add-contenido-ia *ngSwitchCase="'contenidoIA'"></app-add-contenido-ia>
