--- a/src/app/shared/cards/activity/activity.component.html
+++ b/src/app/shared/cards/activity/activity.component.html
@@ -1,6 +1,6 @@
 <div 
   class="relative py-2 px-12 cursor-pointer"
-  (click)="onCardClick()"
+  (click)="onCardClick($event)" 
 >
   <div class="relative w-full h-full bg-white border-2 border-[#004C4C99] rounded-lg shadow-md p-6">
     <div class="flex justify-between items-center px-4 rounded-lg">
@@ -12,7 +12,7 @@
     
     <div class="relative" *ngIf="userType !== 'alumno'">
       <button 
-        (click)="toggleModal()" 
+        (click)="toggleModal($event)" 
         class="absolute bottom-4 right-2 text-gray-400 hover:text-gray-600"
       >
         <img class="h-8" src="./menu_1.png" alt="Menú de opciones" />
